--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,22 +4,35 @@
             Article Three | Aditya Joshi 
         </title>
         <meta name="viewport" content="width-device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: #2d2c2c;
+                font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
+        <div class = "container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Three
+            </h3>
+            <div>
+                Feb 25, 2018
+            </div>
+            <div>
+                <p>
+                    This is the content for my Third article.
+                </p>
+             </div>
         </div>
-        <hr/>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            Feb 25, 2018
-        </div>
-        <div>
-            <p>
-                This is the content for my Third article.
-            </p>
-         </div>
     </body>
 </html>
